--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
 		"moduleResolution": "node",
 		"allowSyntheticDefaultImports": true,
 		"esModuleInterop": true,
-		"jsx": "preserve",
+		"jsx": "react-jsx",
 		"allowJs": true,
 		"checkJs": true,
 		"noEmit": true,
