--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@solidjs/meta": "^0.28.5",
     "@solidjs/router": "^0.8.2",
+    "picocolors": "^1.0.0",
     "solid-js": "^1.7.6",
     "vite-plugin-solid": "^2.7.0"
   }
