--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.2.13",
     "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react": "^3.1.0",
+    "acorn-loose": "^8.3.0",
     "connect": "^3.7.0",
     "fast-glob": "^3.2.12",
     "fully-react": "^0.0.2",
@@ -20,7 +21,6 @@
     "prisma": "^4.12.0",
     "react": "0.0.0-experimental-e3fb7c1de-20230621",
     "react-dom": "0.0.0-experimental-e3fb7c1de-20230621",
-    "react-server-dom-webpack": "0.0.0-experimental-efb381bbf-20230505",
     "serve-static": "^1.15.0",
     "typescript": "5.1.0-beta",
     "vite": "^4.3.9",
